# make-cmake

./: README.md
.github/workflows/: cmake.yml
hello-cmake/: CMakeLists.txt
hello-cmake/include/: hello.h
hello-cmake/lib/: CMakeLists.txt  hello.cc
hello-cmake/src/: CMakeLists.txt
hello-make/: Makefile
hello-make/lib/: Makefile  hello.cc
hello-make/src/: Makefile  main.cc
